[package]
name = "canic-sharding-runtime"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-sharding-runtime"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
canic-core = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
