[package]
name = "canic-subnet-catalog"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Pure cached IC subnet catalog model and resolver for Canic host tools"
readme = "README.md"
documentation = "https://docs.rs/canic-subnet-catalog"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
