[package]
name = "canic-template-types"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Shared template and wasm-store identifier types for Canic"
readme = false
documentation = "https://docs.rs/canic-template-types"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic-memory = { workspace = true }
canic-types = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
