[package]
name = "canic-testing-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Workspace-only internal test support for Canic self-tests"
readme = "README.md"
publish = false

[dependencies]
candid = { workspace = true }
canic = { workspace = true, features = ["auth-crypto"] }
canic-control-plane = { workspace = true }
canic-core = { workspace = true, features = ["auth-crypto"] }
canic-testkit = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
