[package]
name = "canic-testing-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Workspace-only internal test support for Canic self-tests"
readme = "README.md"
publish = false

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
canic-control-plane = { workspace = true }
canic-core = { workspace = true }
canic-testkit = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
