[package]
name = "canic-testing-internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Workspace-only internal test support for Canic self-tests"
readme = "README.md"
publish = false

[dependencies]
candid = { workspace = true }
canic = { workspace = true, features = ["metrics"] }
canic-control-plane = { workspace = true, features = [
    "root-control-plane",
    "wasm-store-canister",
] }
canic-core = { workspace = true }
canic-host = { workspace = true }
ic-testkit = { workspace = true }

[lints]
workspace = true
