[package]
name = "canic-testkit"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]
default = []
ic = []

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
canic-internal = { workspace = true }
derive_more = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
