[package]
name = "canic-testkit"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-testkit"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
derive_more = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
