[package]
name = "canic-tests"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Workspace-only integration tests for Canic"
readme = false
publish = false

[dependencies]
canic = { workspace = true, features = ["blob-storage-billing"] }
canic-testing-internal = { workspace = true }
ic-testkit = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
canic-control-plane = { workspace = true }
canic-core = { workspace = true }
canic-host = { workspace = true }
ic-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
