[package]
name = "canic-tests"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = "Workspace-only integration tests for Canic"
readme = false
publish = false

[dependencies]
candid = { workspace = true }
canic = { workspace = true, features = ["blob-storage-billing", "metrics"] }
canic-testing-internal = { workspace = true }
ic-testkit = { workspace = true }

[dev-dependencies]
canic-control-plane = { workspace = true, features = [
    "root-control-plane",
    "wasm-store-canister",
] }
canic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
