[package]
name = "canic-types"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
