[package]
name = "canic-utils"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-utils"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
canic-cdk = { workspace = true }
convert_case = { workspace = true }
derive_more = { workspace = true }
tinyrand = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
