[package]
name = "canic-utils"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic-utils"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]
default = ["case", "rand"]
case = ["dep:convert_case", "dep:derive_more"]
rand = ["dep:rand_chacha", "dep:thiserror"]

[dependencies]
convert_case = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
