[package]
name = "canic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]
default = ["metrics"]
metrics = []
control-plane = ["dep:canic-control-plane"]
sharding = ["canic-core/sharding"]
auth-crypto = ["canic-core/auth-crypto"]

[dependencies]
candid = { workspace = true }
canic-cdk = { workspace = true }
canic-control-plane = { workspace = true, optional = true }
canic-core = { workspace = true }
canic-macros = { workspace = true }
canic-memory = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { workspace = true }
toml = { workspace = true }

[build-dependencies]
canic-core = { workspace = true }

[dev-dependencies]
ic-cdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
