[package]
name = "canic"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = "README.md"
documentation = "https://docs.rs/canic"
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]
default = ["metrics"]
metrics = []
control-plane = ["dep:canic-control-plane"]
icp-refill = []
sharding = ["canic-core/sharding"]
auth-root-canister-sig-create = ["canic-core/auth-root-canister-sig-create"]
auth-root-canister-sig-verify = ["canic-core/auth-root-canister-sig-verify"]
auth-issuer-canister-sig-create = ["canic-core/auth-issuer-canister-sig-create"]
auth-issuer-canister-sig-verify = ["canic-core/auth-issuer-canister-sig-verify"]
auth-shard-secp256k1-verify = ["canic-core/auth-shard-secp256k1-verify"]
auth-threshold-ecdsa-public-key = ["canic-core/auth-threshold-ecdsa-public-key"]
auth-threshold-ecdsa-sign = ["auth-threshold-ecdsa-public-key", "canic-core/auth-threshold-ecdsa-sign"]
auth-delegated-token-verify = ["canic-core/auth-delegated-token-verify"]

[dependencies]
candid = { workspace = true }
canic-control-plane = { workspace = true, optional = true }
canic-core = { workspace = true }
canic-macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
ic-cdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
