[package]
name = "canic_internal"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
description = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[features]
default = []
ic = []

[dependencies]
candid = { workspace = true }
canic = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
minicbor-serde = { workspace = true }
remain = { workspace = true }
serde = { workspace = true }
ic-canister-sig-creation = { workspace = true }
num-traits = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
ctor = { workspace = true }
thiserror = { workspace = true }
tinyrand = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
